Fix navigation on mobile

--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,7 @@ select {
 }
 
 .header__title {
+	display: none;
 	flex: 1;
 	text-transform: uppercase;
 }
@@ -346,6 +347,10 @@ select {
 }
 
 @media screen and (min-width: 720px) {
+	.header__title {
+		display: block;
+	}
+
 	.card-list {
 		grid-template-columns: repeat(3, 1fr);
 	}
